# anime-game-cli

./: Cargo.toml  build.rs
src/: cxxlib.rs
